--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        <!--Font awesome icons-->
+        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />-->
+        <!--<script src="https://kit.fontawesome.com/18f8115274.js" crossorigin="anonymous"></script>-->
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -35,7 +38,7 @@
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-6">
                         <div class="text-center my-5">
-                            <h1 class="display-5 fw-bolder text-white mb-2">세종대병원<br>ESL 관리 페이지 입니다.</h1>
+                            <h1 class="display-5 fw-bolder text-white mb-2">세종대병원<br>ESL DB</h1>
                             <p class="lead text-white-50 mb-4">#####</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="./login.html">로그인</a>
@@ -50,30 +53,39 @@
         <section class="py-5 border-bottom" id="features">
             <div class="container px-5 my-5">
                 <div class="row gx-5">
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
+                    <div class="col-lg-3 mb-5 mb-lg-0">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-person"></i></div>
                         <h2 class="h4 fw-bolder">환자 Part</h2>
                         <p>환자의 관한 정보를 처리할 수 있습니다.</p>
-                        <a class="text-decoration-none" href="#!">
-                            Call to action
+                        <a class="text-decoration-none" href="patient.html">
+                            들어가기
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
+                    <div class="col-lg-3 mb-5 mb-lg-0">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-person"></i></div>
                         <h2 class="h4 fw-bolder">간호사 Part</h2>
-                        <p>간호사</p>
-                        <a class="text-decoration-none" href="#!">
-                            Call to action
+                        <p>부가 설명 칸입니다.</p>
+                        <a class="text-decoration-none" href="nurse.html">
+                            들어가기
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                    <div class="col-lg-3 mb-5 mb-lg-0">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-person"></i></div>
                         <h2 class="h4 fw-bolder">의사 Part</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                        <a class="text-decoration-none" href="#!">
-                            Call to action
+                        <p>부가 설명 칸입니다.</p>
+                        <a class="text-decoration-none" href="doctor.html">
+                            들어가기
+                            <i class="bi bi-arrow-right"></i>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 mb-5 mb-lg-0">
+                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-wrench-adjustable"></i></div>
+                        <h2 class="h4 fw-bolder">관리자 Part</h2>
+                        <p>관리자의 권한으로만 접근가능합니다.</p>
+                        <a class="text-decoration-none" href="admin.html">
+                            들어가기
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
