--- a/user_register.html
+++ b/user_register.html
@@ -32,21 +32,66 @@
 
         <!--Register Section-->
         <section>
-            <form action = "#" type = "POST">
-                <div class = "form-group">
-                    <input class = "form-control" id = "E-mail" name = "E-mail" type = "text" placeholder="E-mail">
+            <div class="container">
+                <div class="row">
+                  <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                    <div class="card card-signin my-5">
+                      <div class="card-body">
+                        <h2 class="card-title text-center mb-5">세종대병원</h2>
+                        <form class="form-user-register" method="post" action="login">
+
+                            <div class = "row">
+                                <div class="form-group col-md-6 ">
+                                    <label for = "id">아이디</label>
+                                    <input type="text" id="id" name="id" class="form-control" required autofocus>
+                                </div>
+                    
+                                <div class="form-group col-md-6 mb-4">
+                                    <label for = "pwd">비밀번호</label>
+                                    <input type="password" id="pwd" name="pwd" class="form-control" required autofocus>
+                                </div>
+                            </div>
+
+                            <div class="form-group mb-4">
+                                <label for = "E-mail">이메일</label>
+                                <input type="text" id="E-mail" name="E-mail" class="form-control" required autofocus>
+                            </div>
+                            
+                            <div class = "form-row">
+                                <label for = "job-classfication">직종</label>
+                                <select class = "form-control mb-4" id = "job" name = "job" onchange = "MyJobSelect(this.value)">
+                                    <option value selected = "선택">선택</option>
+                                    <option value = "의사">의사</option>
+                                    <option value = "간호사">간호사</option>
+                                    <option value = "환자">환자</option>
+                                </select>
+                            </div>
+                            <div class = "mb-4">
+                                <script>
+                                    function MyJobSelect(str){
+                                       var J_select = document.getElementById("code").innerHTML = str + " " + "코드";
+                                    }
+                                </script>
+                                <label id = "code" for = "code">코드</label>
+                                <!--<label for = "code">코드</label>-->
+                                <input type = "text" id = "code" name ="code" class = "form-control" required autofocus>
+                            </div>
+                            <div class="text-center mb-4">
+                                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">회원가입</button>
+                            </div>
+
+                            <div class ="text-center mb-4">
+                                <h7>이미 회원이시라면, <a href="./login.html">이 링크를 클릭하여주십시오.</a></h7>
+                            </div>
+
+                        </form>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class = "form-group">
-                    <input class = "form-control" id = "id" name = "username" type = "text" placeholder="ID">
-                </div>
-                <div class = "form-group">
-                    <input class = "form-control" id = "password" name = "password" type = "password" placeholder="password">
-                </div>
-                <div class = "form-group">
-                    <button type="submit" class="form-control btn btn-primary" value = "user_regitser">회원 가입</button>
-                </div>
-            </form>
+              </div>  
         </section>
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
